<resources>
    <string name="app_name">Social Gram</string>

    <string name="home">Home</string>
    <string name="add">Add Post</string>
    <string name="notification">Notifications</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>

    <string name="discover">Discover</string>
    <string name="add_story">Add a Story</string>
    <string name="name">Shil Alone</string>
    <string name="about_dummy">Traveler ,Life Lover</string>
    <string name="like_dummy">354</string>
    <string name="comment_dummy">42</string>
    <string name="share_dummy">10</string>
    <string name="work_dummy">Android Developer</string>
    <string name="followers">Followers</string>
    <string name="friends">Friends</string>
    <string name="my_friends">My Friends</string>
    <string name="photos">Photos</string>
    <string name="my_toolbar_title">My Profile</string>
    <string name="request">Requests</string>
    <string name="notification_dummy">Shil Alone commented on your post</string>
    <string name="notification_time">Just Now</string>
    <string name="about">I am an android developer with interest in building various cool applications for making peoples life easy.</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome To SocialGram</string>
    <string name="keep_connected">Keep Connected With Friends</string>
    <string name="have_account">Don\'t have an account ?</string>
    <string name="already_account">Already have an account ?</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="user_name">Name</string>
    <string name="profession">Profession</string>

</resources>