<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />
    <item
        android:id="@+id/notification"
        android:enabled="true"
        android:icon="@drawable/ic_notification"
        android:title="@string/notification" />
    <item
        android:id="@+id/addPost"
        android:enabled="true"
        android:icon="@drawable/ic_add"
        android:title="@string/add" />
    <item
        android:id="@+id/search"
        android:enabled="true"
        android:icon="@drawable/ic_search"
        android:title="@string/search" />
    <item
        android:id="@+id/profile"
        android:enabled="true"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile" />
</menu>