<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginTop="8dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imgProfile"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:padding="2dp"
        android:src="@drawable/ic_profile"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/orange_circle"
        app:layout_constraintBottom_toBottomOf="@+id/imgProfile"
        app:layout_constraintEnd_toEndOf="@+id/imgProfile"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imgProfile"
        app:layout_constraintTop_toTopOf="@+id/imgProfile"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imgProfile"
        app:layout_constraintStart_toEndOf="@+id/imgProfile"
        app:layout_constraintTop_toTopOf="@+id/imgProfile"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_dummy"
        app:layout_constraintStart_toStartOf="@+id/txtUserName"
        app:layout_constraintTop_toBottomOf="@+id/txtUserName" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/imgProfile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imgProfile"
        app:srcCompat="@drawable/ic_more" />

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/imgPost"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:scaleType="centerCrop"
        android:src="@drawable/boy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgProfile"
        app:riv_corner_radius="10dip"
        app:riv_mutate_background="true" />

    <ImageView
        android:id="@+id/imgSavePost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="@+id/imgPost"
        app:layout_constraintTop_toTopOf="@+id/imgPost"
        app:srcCompat="@drawable/ic_bookmark"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/txtLike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:drawablePadding="10dp"
        android:gravity="center"
        android:text="@string/like_dummy"
        app:drawableLeftCompat="@drawable/ic_unliked"
        app:drawableTint="@color/icon_tint"
        app:layout_constraintStart_toStartOf="@+id/imgPost"
        app:layout_constraintTop_toBottomOf="@+id/imgPost" />

    <TextView
        android:id="@+id/txtComment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:drawablePadding="10dp"
        android:gravity="center"
        android:text="@string/comment_dummy"
        app:drawableLeftCompat="@drawable/ic_comment"
        app:drawableTint="@color/icon_tint"
        app:layout_constraintBottom_toBottomOf="@+id/txtLike"
        app:layout_constraintStart_toEndOf="@+id/txtLike"
        app:layout_constraintTop_toTopOf="@+id/txtLike" />

    <TextView
        android:id="@+id/txtShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:drawablePadding="10dp"
        android:gravity="center"
        android:text="@string/share_dummy"
        app:drawableLeftCompat="@drawable/ic_share"
        app:drawableTint="@color/icon_tint"
        app:layout_constraintBottom_toBottomOf="@+id/txtComment"
        app:layout_constraintStart_toEndOf="@+id/txtComment"
        app:layout_constraintTop_toTopOf="@+id/txtComment" />

</androidx.constraintlayout.widget.ConstraintLayout>