<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:diagonal="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ProfileFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        diagonal:layout_constraintEnd_toEndOf="parent"
        diagonal:layout_constraintStart_toStartOf="parent"
        diagonal:layout_constraintTop_toTopOf="parent">

        <com.github.florent37.diagonallayout.DiagonalLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            diagonal:diagonal_angle="10"
            diagonal:diagonal_direction="left"
            diagonal:diagonal_position="bottom">


            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/profile_cover" />

            <View
                android:id="@+id/view2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/shaded_black" />
        </com.github.florent37.diagonallayout.DiagonalLayout>
    </LinearLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profileImage"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:src="@drawable/boy"
        diagonal:civ_border_color="@color/white"
        diagonal:civ_border_width="5dp"
        diagonal:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        diagonal:layout_constraintEnd_toEndOf="@+id/linearLayout"
        diagonal:layout_constraintStart_toStartOf="@+id/linearLayout"
        diagonal:layout_constraintTop_toTopOf="@+id/linearLayout"
        diagonal:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imgTick"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:src="@drawable/tick"
        diagonal:layout_constraintBottom_toBottomOf="@+id/profileImage"
        diagonal:layout_constraintEnd_toEndOf="@+id/profileImage"
        diagonal:layout_constraintHorizontal_bias="0.86"
        diagonal:layout_constraintStart_toStartOf="@+id/profileImage"
        diagonal:layout_constraintTop_toTopOf="@+id/profileImage"
        diagonal:layout_constraintVertical_bias="0.88" />

    <TextView
        android:id="@+id/txtMyName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/acme"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="18sp"
        diagonal:layout_constraintEnd_toEndOf="@+id/profileImage"
        diagonal:layout_constraintStart_toStartOf="@+id/profileImage"
        diagonal:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/txtPosition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/work_dummy"
        android:textSize="14sp"
        diagonal:layout_constraintEnd_toEndOf="@+id/txtMyName"
        diagonal:layout_constraintStart_toStartOf="@+id/txtMyName"
        diagonal:layout_constraintTop_toBottomOf="@+id/txtMyName" />

    <View
        android:id="@+id/addFriendView"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/circle_background"
        android:backgroundTint="@color/peter_river"
        app:layout_constraintHorizontal_chainStyle="packed"
        diagonal:layout_constraintEnd_toStartOf="@+id/messageView"
        diagonal:layout_constraintHorizontal_bias="0.5"
        diagonal:layout_constraintStart_toStartOf="parent"
        diagonal:layout_constraintTop_toBottomOf="@+id/txtPosition" />

    <View
        android:id="@+id/messageView"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/circle_background"
        android:backgroundTint="@color/alizarin"
        app:layout_constraintTop_toTopOf="@+id/addFriendView"
        diagonal:layout_constraintEnd_toStartOf="@+id/callView"
        diagonal:layout_constraintHorizontal_bias="0.5"
        diagonal:layout_constraintStart_toEndOf="@+id/addFriendView"
        diagonal:layout_constraintTop_toBottomOf="@+id/txtPosition" />

    <View
        android:id="@+id/callView"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/circle_background"
        android:backgroundTint="@color/emerald"
        app:layout_constraintTop_toTopOf="@+id/messageView"
        diagonal:layout_constraintEnd_toEndOf="parent"
        diagonal:layout_constraintHorizontal_bias="0.5"
        diagonal:layout_constraintStart_toEndOf="@+id/messageView"
        diagonal:layout_constraintTop_toBottomOf="@+id/txtPosition" />

    <ImageView
        android:id="@+id/btnAddFriend"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="8dp"
        android:src="@drawable/add_friend"
        app:layout_constraintBottom_toBottomOf="@+id/addFriendView"
        app:layout_constraintEnd_toEndOf="@+id/addFriendView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/addFriendView"
        app:layout_constraintTop_toTopOf="@+id/addFriendView"
        app:layout_constraintVertical_bias="0.0"
        app:tint="@color/white" />

    <ImageView
        android:id="@+id/btnMessage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="8dp"
        android:src="@drawable/ic_comment"
        app:layout_constraintBottom_toBottomOf="@+id/messageView"
        app:layout_constraintEnd_toEndOf="@+id/messageView"
        app:layout_constraintStart_toStartOf="@+id/messageView"
        app:layout_constraintTop_toTopOf="@+id/messageView"
        app:tint="@color/white" />

    <ImageView
        android:id="@+id/btnCall"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="8dp"
        android:src="@drawable/call"
        app:layout_constraintBottom_toBottomOf="@+id/callView"
        app:layout_constraintEnd_toEndOf="@+id/callView"
        app:layout_constraintHorizontal_bias="0.43"
        app:layout_constraintStart_toStartOf="@+id/callView"
        app:layout_constraintTop_toTopOf="@+id/callView"
        app:tint="@color/white" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:cardMaxElevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/messageView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="8dp"
            android:paddingTop="4dp"
            android:paddingEnd="8dp"
            android:paddingBottom="4dp">

            <TextView
                android:id="@+id/followers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/followers"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@+id/view4"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtFollowers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/like_dummy"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/followers"
                app:layout_constraintStart_toStartOf="@+id/followers"
                app:layout_constraintTop_toBottomOf="@+id/followers" />

            <View
                android:id="@+id/view4"
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:layout_marginBottom="8dp"
                android:background="@color/asbestos"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/friends"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/followers"
                app:layout_constraintTop_toTopOf="@+id/followers" />

            <TextView
                android:id="@+id/friends"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/friends"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@+id/view5"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/view4"
                app:layout_constraintTop_toTopOf="@+id/view4" />

            <TextView
                android:id="@+id/txtFriends"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comment_dummy"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/friends"
                app:layout_constraintStart_toStartOf="@+id/friends"
                app:layout_constraintTop_toBottomOf="@+id/friends" />

            <View
                android:id="@+id/view5"
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:layout_marginBottom="8dp"
                android:background="@color/asbestos"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/photos"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/friends"
                app:layout_constraintTop_toTopOf="@+id/friends" />

            <TextView
                android:id="@+id/photos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/photos"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/view5"
                app:layout_constraintTop_toTopOf="@+id/view5" />

            <TextView
                android:id="@+id/txtPhotos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share_dummy"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/photos"
                app:layout_constraintStart_toStartOf="@+id/photos"
                app:layout_constraintTop_toBottomOf="@+id/photos" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/txtMyAbout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/about"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <TextView
        android:id="@+id/myFriends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/acme"
        android:text="@string/my_friends"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/txtMyAbout"
        app:layout_constraintTop_toBottomOf="@+id/txtMyAbout" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/friendsRV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myFriends" />
    />

</androidx.constraintlayout.widget.ConstraintLayout>